<think> We are given a git diff that shows a change in the .DS_Store file.  The .DS_Store file is a hidden file on macOS that stores custom attributes of a folder (like icon positions, view settings, etc.).  Since it's a binary file and the diff shows it has changed, but we cannot see the content changes, we have to make an assumption.
 However, note that .DS_Store files are typically not committed to version control because they are system-specific and not relevant to the project.
 But in this case, the file is already tracked (as it's being modified) and we are updating it.

 Since the change is only in the .DS_Store, and it's a binary change, the commit message should reflect that we are updating this file.

 But note that it's generally bad practice to commit .DS_Store. However, if for some reason the project policy is to track it, then we update it.

 However, the user has provided a diff and asked for a commit message, so we must generate one.

 Given the context, a suitable commit message would simply state that the .DS_Store file was updated, as we don't have more information.

 Steps:
 1. The summary should be short (50-72 characters) and in imperative mood.
 2. We can write something like "Update .DS_Store file for directory settings".

 But note that the .DS_Store file might be for the root directory or a specific directory? The diff doesn't specify a path beyond the root.

 However, the diff only shows the root .DS_Store.

 Considering that, we can write:
   "Update root directory .DS_Store settings"

 But let's count the characters of a few options:
   Option 1: "Update .DS_Store" -> 15 characters, but not very descriptive.
   Option 2: "Update root .DS_Store with latest folder settings" -> 49 characters.

 However, we don't know what the changes are exactly, so we keep it general.

 Alternatively, we can note that .DS_Store changes are often accidental and not intended for commit. But the task is to write a commit message for the change.

 Since the us

--- a/footer.html
+++ b/footer.html
@@ -1,11 +1,15 @@
 <footer
   style="
-    background-color: #004b7c;
-    padding: 1rem;
+    background-color: #004b75;
     color: white;
     text-align: center;
-    margin-top: 2rem;
+    padding: 1rem;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 0.9rem;
+    z-index: 999;
   "
 >
-  <p>&copy; 2025 حلّها بسيط – جميع الحقوق محفوظة</p>
+  © 2025 حلّها بسيط – جميع الحقوق محفوظة
 </footer>
